
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uuid_t ;
struct rrdengine_instance {int dummy; } ;
struct rrdeng_page_descr {struct page_cache_descr* pg_cache_descr; } ;
struct page_cache_descr {void* page; } ;


 int D_RRDENGINE ;
 int INVALID_TIME ;
 int debug (int ,char*) ;
 struct rrdeng_page_descr* pg_cache_lookup (struct rrdengine_instance*,int *,int *,int ) ;

void *rrdeng_get_latest_page(struct rrdengine_instance *ctx, uuid_t *id, void **handle)
{
    struct rrdeng_page_descr *descr;
    struct page_cache_descr *pg_cache_descr;

    debug(D_RRDENGINE, "Reading existing page:");
    descr = pg_cache_lookup(ctx, ((void*)0), id, INVALID_TIME);
    if (((void*)0) == descr) {
        *handle = ((void*)0);

        return ((void*)0);
    }
    *handle = descr;
    pg_cache_descr = descr->pg_cache_descr;

    return pg_cache_descr->page;
}
