; ModuleID = '/home/carl/AnghaBench/netdata/database/engine/extr_rrdengineapi.c_rrdeng_get_latest_page.c'
source_filename = "/home/carl/AnghaBench/netdata/database/engine/extr_rrdengineapi.c_rrdeng_get_latest_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdengine_instance = type { i32 }
%struct.rrdeng_page_descr = type { %struct.page_cache_descr* }
%struct.page_cache_descr = type { i8* }

@D_RRDENGINE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Reading existing page:\00", align 1
@INVALID_TIME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @rrdeng_get_latest_page(%struct.rrdengine_instance* %0, i32* %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.rrdengine_instance*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca %struct.rrdeng_page_descr*, align 8
  %9 = alloca %struct.page_cache_descr*, align 8
  store %struct.rrdengine_instance* %0, %struct.rrdengine_instance** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8** %2, i8*** %7, align 8
  %10 = load i32, i32* @D_RRDENGINE, align 4
  %11 = call i32 @debug(i32 %10, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.rrdengine_instance*, %struct.rrdengine_instance** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* @INVALID_TIME, align 4
  %15 = call %struct.rrdeng_page_descr* @pg_cache_lookup(%struct.rrdengine_instance* %12, i32* null, i32* %13, i32 %14)
  store %struct.rrdeng_page_descr* %15, %struct.rrdeng_page_descr** %8, align 8
  %16 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %8, align 8
  %17 = icmp eq %struct.rrdeng_page_descr* null, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i8**, i8*** %7, align 8
  store i8* null, i8** %19, align 8
  store i8* null, i8** %4, align 8
  br label %30

20:                                               ; preds = %3
  %21 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %8, align 8
  %22 = bitcast %struct.rrdeng_page_descr* %21 to i8*
  %23 = load i8**, i8*** %7, align 8
  store i8* %22, i8** %23, align 8
  %24 = load %struct.rrdeng_page_descr*, %struct.rrdeng_page_descr** %8, align 8
  %25 = getelementptr inbounds %struct.rrdeng_page_descr, %struct.rrdeng_page_descr* %24, i32 0, i32 0
  %26 = load %struct.page_cache_descr*, %struct.page_cache_descr** %25, align 8
  store %struct.page_cache_descr* %26, %struct.page_cache_descr** %9, align 8
  %27 = load %struct.page_cache_descr*, %struct.page_cache_descr** %9, align 8
  %28 = getelementptr inbounds %struct.page_cache_descr, %struct.page_cache_descr* %27, i32 0, i32 0
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** %4, align 8
  br label %30

30:                                               ; preds = %20, %18
  %31 = load i8*, i8** %4, align 8
  ret i8* %31
}

declare dso_local i32 @debug(i32, i8*) #1

declare dso_local %struct.rrdeng_page_descr* @pg_cache_lookup(%struct.rrdengine_instance*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
